--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 authors = ["Arunmadhavan Evr"]
 description = "🚀 A sleek CLI tool to track and optimize Cargo commands."
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/your-repo/cargo-sleek"
+repository = "https://github.com/Arunmadhavan28/sleek"
 keywords = ["cargo", "cli", "tracking", "rust"]
 categories = ["development-tools", "command-line-utilities"]
+readme = "README.md"
 
 [[bin]]
 name = "cargo-sleek"
