--- a/.github/workflows/0pirate_review.yml
+++ b/.github/workflows/0pirate_review.yml
@@ -11,20 +11,24 @@ jobs:
   review:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Check out the main 'sleek' repository's code
       - name: Checkout Sleek Repo
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
+      # Step 2: Check out your '0pirate-action' repository
       - name: Checkout 0pirate Action Code
         uses: actions/checkout@v4
         with:
           repository: Arunmadhavan28/0pirate-action
           path: 0pirate-action
 
+      # Step 3: Run the action from the local subfolder
       - name: Run 0pirate Security Review
         uses: ./0pirate-action
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }} # <-- This is the new, correct name
+          # --- THIS IS THE CRITICAL SECTION ---
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           opirate-action-token: ${{ secrets.OPIRATE_ACTION_TOKEN }}
           opirate-api-key-name: ${{ secrets.OPIRATE_API_KEY_NAME }}
