--- a/.github/workflows/0pirate_review.yml
+++ b/.github/workflows/0pirate_review.yml
@@ -28,5 +28,5 @@ jobs:
         uses: ./0pirate-action
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }} # <-- This is the new, correct name
-          opirate-action-token: ${{ secrets.OPIRATE_ACTION_TOKEN }}
+          opirate-action-token: ${{ secrets.OPIRATE_ACTION_TOKEN_V2 }}
           opirate-api-key-name: ${{ secrets.OPIRATE_API_KEY_NAME }}
